# tree-sed

./: Cargo.toml  README.md
example/: source_code.c
src/: main.rs  script_executor.rs  script_parser.rs
