[package]
name = "tree-sed"
version = "0.1.0"
edition = "2021"
description = "Manpulate ast tree like `sed`."
readme = "README.md"
license = "LGPL-2.1-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.2"
tree-sitter-c = { version = "0.20.1", optional = true }
tree-sitter-cpp = { version = "0.20.0", optional = true }
tree-sitter-rust = { version = "0.20.0", optional = true }
anyhow = "1.0"
clap = { version = "3.0.10" }

[features]
default = ["c", "cpp", "rust"]
c = ["tree-sitter-c"]
cpp = ["tree-sitter-cpp"]
rust = ["tree-sitter-rust"]
